# navix

./: CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  HelloWorld.java  LICENSE  PACKAGE_INSTALLER.md  README.md  build.sh  build_deb.sh  calculator.rb  demo.go  demo.py  demo.swift  demo.txt  hello.kt  main.rs  navix-installer.pkg  navix-native  navix_deb.deb  script.sh  test-samples.txt  user.php
build_deb/cpp-assist_1.0.0/DEBIAN/: control
navix_deb/DEBIAN/: control
src/: .main.cpp.swo  .main.cpp.swp  AutocompleteEngine.cpp  AutocompleteEngine.hpp  FileScanner.cpp  FileScanner.hpp  FileWatcher.cpp  FileWatcher.hpp  JsonExporter.cpp  JsonExporter.hpp  LSPServer.cpp  LSPServer.hpp  PerformanceLogger.cpp  PerformanceLogger.hpp  Symbol.cpp  Symbol.hpp  TUI.cpp  TUI.hpp  main.cpp
